Add mores changes to the census table to ensure the relationship for loading

--- a/03_load/03_load_TRACEY - test.ipynb
+++ b/03_load/03_load_TRACEY - test.ipynb
@@ -2,295 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Transform the zip_to_zcta dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import ZIP to ZCTA conversion table. All fields were imported as string to ensure the ZIP Codes retains the \"00\" prefixes \n",
-    "zip_to_zcta_df = pd.read_excel(\"../00_input/zip_to_zcta_2019.xlsx\", dtype = 'str')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the ZIP/ZCTA dataframe data, particularly for retention of \"00\" for ZIP Codes\n",
-    "zip_to_zcta_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Review data types in ZIP/ZCTA dataframe\n",
-    "zip_to_zcta_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the minimum and maximum length of values in column ZIP_CODE\n",
-    "zip_code_len = zip_to_zcta_df[\"ZIP_CODE\"].apply(len)\n",
-    "print(f\"Max zip_code length is {zip_code_len.max()}.\")\n",
-    "print(f\"Min zip_code length is {zip_code_len.min()}.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the minimum and maximum length of values in column ZCTA\n",
-    "zcta_len = zip_to_zcta_df[\"ZCTA\"].apply(len)\n",
-    "print(f\"Max zcta length is {zcta_len.max()}.\")\n",
-    "print(f\"Min zcta length is {zcta_len.min()}.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A look into rows with length of values in column ZCTA > 5 \n",
-    "zip_to_zcta_df[zip_to_zcta_df.ZCTA.str.len() > zcta_len.min()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove all rows with ZCTA = \"No ZCTA\"\n",
-    "zip_to_zcta_df = zip_to_zcta_df[~(zip_to_zcta_df.ZCTA.str.len() > zcta_len.min())]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_to_zcta_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Identify any duplicated ZIP Codes as all ZIP Codes should be unique (many ZIP Codes to one ZCTA relationship)\n",
-    "zip_to_zcta_df['ZIP_CODE'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_to_zcta_df['ZCTA'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "duplicate_zcta_rows = zip_to_zcta_df[zip_to_zcta_df.duplicated(subset=[\"ZCTA\"], keep=False)].sort_values(by=\"ZCTA\")\n",
-    "duplicate_zcta_rows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "short_zip_zcta = zip_to_zcta_df[[\"ZIP_CODE\", \"PO_NAME\", \"STATE\", \"ZCTA\"]].rename(columns={\"ZIP_CODE\": \"zip_code\"})\n",
-    "short_zip_zcta.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "short_zip_zcta.to_csv(\"zcta_to_match.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_zcta = short_zip_zcta[[\"zip_code\", \"ZCTA\"]]\n",
-    "final_zcta.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_zcta.to_csv(\"zcta.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Test merging against zip_code in the zip_code table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import cleaned restaurant data\n",
-    "zip_code_df = pd.read_csv(\"../02_transform_restaurant/zip_code.csv\", dtype={'zip_code': 'str'})\n",
-    "zip_code_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# An overview of restaurant data\n",
-    "zip_code_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "common_zip_mix = pd.merge(zip_code_df, zip_to_zcta_df, left_on=\"zip_code\", right_on=\"ZIP_CODE\")\n",
-    "common_zip_mix.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "common_zip_mix.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "common_zip_mix[common_zip_mix[\"city\"] != common_zip_mix[\"PO_NAME\"]]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As can be seen from above, most of the \"city\" names in the zip_code table are actually the same as the \"PO_NAME\" names in zip_to_zcta table. Even with some differences, a closer look tells us that they are also the same.\n",
+    "import pandas as pd\n",
     "\n",
-    "As all zip_code in zip_code table are in zip_to_zcta table, we can just use zip_to_zcta table to map zip_code in restaurant address table to ZCTA code in the census table."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_to_zcta_df[\"ZIP_TYPE\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_to_zcta_df[\"zip_join_type\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove unnecessary columns to refine dataset\n",
-    "final_zip_to_zcta = zip_to_zcta_df[[\"ZIP_CODE\", \"PO_NAME\", \"STATE\", \"ZCTA\"]]\n",
-    "final_zip_to_zcta.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Change ZIP_CODE into zip_code\n",
-    "clean_zip_to_zcta = final_zip_to_zcta.rename(columns={\"ZIP_CODE\": \"zip_code\", \"PO_NAME\": \"city_or_po_name\", \"STATE\": \"state\"})\n",
-    "clean_zip_to_zcta.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_zip_to_zcta.to_csv(\"clean_zip_to_zcta.csv\", index=False)"
+    "# Python SQL toolkit and Object Relational Mapper\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, inspect, func, distinct\n",
+    "\n",
+    "# Import password authentication for the postgresql database\n",
+    "from config import password"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Connect to local database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Engine and connection\n",
+    "engine = create_engine(f\"postgresql://postgres:{password}@localhost:5432/test_etl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine.table_names()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test merging against ZCTA in the census table"
+    "### Use pandas to load csv-converted dataframe into database"
    ]
   },
   {
@@ -309,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_df.info()"
+    "census_df.to_sql(name='social_economics', con=engine, if_exists=\"append\", index=False)"
    ]
   },
   {
@@ -318,8 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zcta_census = pd.merge(census_df, zip_to_zcta_df, how=\"outer\", on=\"ZCTA\")\n",
-    "zcta_census.head()"
+    "restaurant_df = pd.read_csv(\"../02_transform_restaurant/restaurant_id.csv\")\n",
+    "restaurant_df.head()"
    ]
   },
   {
@@ -328,14 +97,218 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zcta_census.info()"
+    "restaurant_df.to_sql(name='restaurant', con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_zcta_df = pd.read_csv(\"../02_transform_zip_zcta/zcta.csv\", dtype='str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restaurant_address_df = pd.read_csv(\"../02_transform_restaurant/restaurant_address.csv\", dtype={'zip_code': 'str'})\n",
+    "restaurant_address_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restaurant_address_df.to_sql(name='restaurant_address', con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_zcta_df = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zcta_df.to_sql(name=\"zcta\", con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_df = pd.read_csv(\"../02_transform_restaurant/zip_code.csv\", dtype='str')\n",
+    "zip_code_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_df.to_sql(name='zip_code', con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zcta_df = pd.read_csv(\"../02_transform_zip_zcta/zcta.csv\", dtype='str')\n",
+    "zcta_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv(\"../02_transform_zip_zcta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reflect Tables into SQLAlchemy ORM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
+    "\n",
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine.table_names()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparing the number of non-null ZCTA (41099) and non-null zip_code (41098), there is one ZCTA in the census table without a matching ZCTA in the zip_to_zcta table."
+    "### Import the csv files"
    ]
   },
   {
@@ -343,54 +316,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "zcta_census[zcta_census[\"zip_code\"].isnull()]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "zcta_to_remove = zcta_census[zcta_census[\"zip_code\"].isnull()][\"ZCTA\"].to_list()\n",
-    "zcta_to_remove"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "census_df = census_df[~census_df[\"ZCTA\"].isin(zcta_to_remove)]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "census_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Update to census csv\n",
-    "census_df.to_csv('../02_transform_census/clean_census.csv', index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export cleaned zip_to_zcta_df to csv"
+    "### Load DataFrames into database"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
